 * [Get-DscWinEvent](http://get-carbon.org/help/Get-DscWinEvent.html) gets DSC events that were written to a computer's DSC event log.
 * [Get-FileSharePermission](http://get-carbon.org/help/Get-FileSharePermission.ps1) gets the sharing permissions on a file/SMB share (*not* the NTFS file system permissions).
 * [Get-Group](http://get-carbon.org/help/Get-Group.html) gets a local group or all local groups.
 * [Get-Msi](http://get-carbon.org/help/Get-Msi.html) reads installer information and properties from an MSI file.
 * [Get-PowerShellModuleInstallPath](http://get-carbon.org/help/Get-PowerShellModuleInstallPath.html) gets the path where new module's should be installed. Beginning with PowerShell 4, modules should get installed into `$env:ProgramFiles\Windows PowerShell\Modules`. Under PowerShell 3, it is `$PSHome\Modules`. This function returns the correct location for the version of PowerShell you're using.
 * [Get-User](http://get-carbon.org/help/Get-User.html) gets a local user or all local users.
 * [Initialize-Lcm](http://get-carbon.org/help/Initialize-Lcm.html) configures the DSC Local Configuration Manager on computers, including installing the private key needed for decrypting credentials.
 * [Remove-GroupMember](http://get-carbon.org/help/Remove-GroupMember.html) removes a user/group from a local group. Thanks to [Philip Kluss](https://bitbucket.org/philkloose) for the contribution. 
 * [Resolve-Identity](http://get-carbon.org/help/Resolve-Identity.html) converts a system, local, or domain principal name or a SID (as a `SecurityIdentifer`, string SDDL, or byte array) into its canonical representation and includes extended identity information: domain, type, and SID.
 * [Start-DscPullConfiguration](http://get-carbon.org/help/Start-DscPullConfiguration.html) starts a configuration check on a computer that is configured to use the PULL refresh mode.